<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_message"
            android:layout_marginBottom="20dp" android:layout_gravity="center"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carWashName"
            android:id="@+id/textView" android:layout_gravity="center|top" android:textSize="20dp"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/carwash"
            android:ems="10"
            android:id="@+id/editText"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boxNumber"
            android:id="@+id/textView2" android:layout_gravity="center" android:textSize="20dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/three"
            android:ems="10"
            android:id="@+id/editText2" android:layout_gravity="center"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/button" android:layout_gravity="center_horizontal" android:layout_marginTop="20dp"
            android:textSize="30dp"/>
</LinearLayout>

