<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_marginBottom="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brandname"
                android:id="@+id/textView3" android:layout_marginRight="10dp" android:textSize="15dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText3" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_marginBottom="10dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/color"
                android:id="@+id/textView4" android:layout_marginRight="10dp" android:textSize="15dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:ems="10"
                android:id="@+id/editText4" android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginBottom="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carnumber"
                android:id="@+id/textView" android:layout_marginRight="10dp" android:textSize="15dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_marginBottom="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:text="@string/phoneNumber"
                android:id="@+id/textView2" android:layout_marginRight="10dp" android:textSize="15dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText2" android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:id="@+id/textView5" android:layout_marginRight="10dp" android:textSize="15dp"
                android:layout_gravity="center"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"/>
    </LinearLayout>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button" android:layout_gravity="center_horizontal"
            android:text="@string/add"/>
</LinearLayout>